# AIEQ-Core

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_proposal.yml
.github/workflows/: ci.yml
docs/: architecture.md
examples/demo/: README.md  run_demo.py
examples/demo/fixtures/autoresearch/: main_results.tsv  radical_results.tsv
examples/demo/fixtures/denario_project/input_files/: data_description.md  idea.md  methods.md  results.md
examples/skill_optimizer/: README.md  eval-suite.json  support-skill.md
src/aieq_core/: __init__.py  _denario_task.py  cli.py  controller.py  intake.py  ledger.py  method_bridge.py  models.py  orchestrator.py  policy.py  runtime.py
src/aieq_core/adapters/: __init__.py  autoresearch.py  denario.py
src/aieq_core/modes/: __init__.py  base.py  ml_research.py  repo_benchmark.py  skill_optimizer.py
tests/: test_autoresearch_adapter.py  test_cli_modes.py  test_controller.py  test_demo_script.py  test_denario_adapter.py  test_intake.py  test_ledger.py  test_method_bridge.py  test_orchestrator.py  test_runtime.py
